AND-3375: fixing a bug with two-line series on liveblog on tablet

--- a/ArticleTemplates/assets/scss/layout/_article--liveblog.scss
+++ b/ArticleTemplates/assets/scss/layout/_article--liveblog.scss
@@ -17,6 +17,17 @@
             position: absolute;
             left: 0;
             top: 0;
+            @include mq(col1, col2) {
+                left: -1 * base-px(6.5);
+            }
+
+            @include mq(col2, col3) {
+                left: -1 * cols($base-3, 4, 1);
+            }
+
+            @include mq($from: col3) {
+                left: -1 * cols($base-4, 5, 1);
+            }            
         }
 
         .alerts {
