--- a/ArticleTemplates/assets/scss/tones/_tone--live.scss
+++ b/ArticleTemplates/assets/scss/tones/_tone--live.scss
@@ -61,11 +61,7 @@
                 color: #fff;
             }
 
-            .section {
-                @include mq($to: col1) {
-                    padding-left: base-px(4);
-                }
-
+            .section{
                 @include mq(col1, col2) {
                     padding-left: base-px(6.5);
                 }
@@ -77,7 +73,14 @@
                 @include mq($from: col3) {
                     padding-left: cols($base-4, 5, 1);
                 }
-                padding-left: base-px(4);
+            }
+
+            .content__series-title {
+                @include mq($to: col1) {
+                    padding-left: base-px(4);
+                }
+
+                position: relative;
             }
 
             .section__live {
